5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1708_3037.log
== TEST (2019-04-29 14:27:00) 
-- CODE:
f = float(input("Valor da funcao: "))

if (x <= -1) or (x >= 1):
	f == x**
	print(f)
elif (-1 < x < 0) or (0 < x < 1):
	f == x
	
-- ERROR:
File "XXXX", line 4
    f == x**
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:29:01) 
-- CODE:
f = float(input("Valor da funcao: "))

if (x <= -1) or (x >= 1):
	

elif (-1 < x < 0) or (0 < x < 1):
	
	
-- ERROR:
File "XXXX", line 6
    elif (-1 < x < 0) or (0 < x < 1):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:41:17) 
-- CODE:
x = float(input("Valor da funcao: "))

if (x <= -1) or (x >= 1):
	print(round(x, 4))


	
-- OUTPUT:
-1.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:42:03) 
-- CODE:
x = float(input("Valor da funcao: "))

if (x <= -1) or (x >= 1):

else:
	print(round(x, 4))


	
-- ERROR:
File "XXXX", line 5
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:42:13) 
-- CODE:
x = float(input("Valor da funcao: "))

if (x <= -1) or (x >= 1):

	else:
		print(round(x, 4))


	
-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:42:34) 
-- CODE:
x = float(input("Valor da funcao: "))

if (x <= -1) or (x >= 1):
	else:
		print(round(x, 4))


	
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:47:11) 
-- CODE:
x = float(input("Valor da funcao: "))

if (x <= -1) or (x >= 1):
	print(round(x**2, 4))
elif (-1 < x < 0) or (0 < x < 1):
	print(round(x, 4))
elif (x == 0):
	print(round(1, 4))

	
	


	
-- OUTPUT:
3.9601
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:47:23) 
-- CODE:
x = float(input("Valor da funcao: "))

if (x <= -1) or (x >= 1):
	print(round(x**2, 4))
elif (-1 < x < 0) or (0 < x < 1):
	print(round(x, 4))
elif (x == 0):
	print(round(1, 4))

	
	


	
-- OUTPUT:
3.9601
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:47:24) 
-- CODE:
x = float(input("Valor da funcao: "))

if (x <= -1) or (x >= 1):
	print(round(x**2, 4))
elif (-1 < x < 0) or (0 < x < 1):
	print(round(x, 4))
elif (x == 0):
	print(round(1, 4))

	
	


	
-- EXECUTION TIME:
0.164878
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
3.9601
---- user output:
3.9601
-- TEST CASE 2:
---- input:
0.99
---- correct output:
0.99
---- user output:
0.99
-- TEST CASE 3:
---- input:
-1.01
---- correct output:
1.0201
---- user output:
1.0201
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
